--- a/OfficeAutomation.Coding/Modules/Modules.CsvFile/Views/CsvFileInfo.xaml
+++ b/OfficeAutomation.Coding/Modules/Modules.CsvFile/Views/CsvFileInfo.xaml
@@ -17,12 +17,12 @@
 				</Grid.RowDefinitions>
 
 				<!--Header-->
-				<Border  Grid.Row="0" Background="#FF5158C7" BorderBrush="#FF1C2235"  BorderThickness="1"  CornerRadius="2,2,0,0"  >
+				<Border  Grid.Row="0" Background="#56463C" BorderBrush="#8E837D"  BorderThickness="1"  CornerRadius="2,2,0,0"  >
 					<ContentPresenter Margin="4" ContentSource="Header"  RecognizesAccessKey="True" />
 				</Border>
 
 				<!-- Main -->
-				<Border  Grid.Row="1"  Background="#FFF9F9F9"   BorderBrush="#FF595584"  CornerRadius="0,0,2,2" BorderThickness="1">
+				<Border  Grid.Row="1"  Background="#D9D5D3"   BorderBrush="#8E837D"  CornerRadius="0,0,2,2" BorderThickness="1">
 					<ContentPresenter Margin="4" />
 				</Border>
 			</Grid>
@@ -52,8 +52,8 @@
 		<!--	Col 0  Row 0 -->
 		<GroupBox Grid.Column="0" Grid.Row="0" Header="Write" FontSize="16" Style="{StaticResource HsGroupBoxStyle}" >
 			<StackPanel>
-					<DataGrid Margin="5" HorizontalAlignment="Left" AutoGenerateColumns="False" CanUserAddRows="False"  BorderThickness="1.3" Height="200" Width="700"
-							    ItemsSource="{Binding Path=ClassInfos}" >
+					<DataGrid Margin="5" HorizontalAlignment="Left" AutoGenerateColumns="False" CanUserAddRows="False"  BorderThickness="1.3" Height="200" Width="700" FontWeight="Bold"
+							    ItemsSource="{Binding Path=ClassInfos}" Background="#F6F5F5"  >
 						<DataGrid.Resources>
 							<Style TargetType="ComboBox" x:Key="AccessModifiersStyle">
 								<Setter Property="ItemsSource"
@@ -85,7 +85,7 @@
                                 EditingElementStyle="{StaticResource ClassTypesStyle}"/>
 
 							<DataGridTextColumn Header="Name" Width="120"
-												  Binding="{Binding Path=ClassName}"/>
+												  Binding="{Binding Path=ClassName}" IsReadOnly="True"/>
 
 							<DataGridTemplateColumn Width="90" MaxWidth="90" >
 								<DataGridTemplateColumn.CellTemplate>
@@ -101,10 +101,10 @@
 
 						</DataGrid.Columns>
 					</DataGrid>
-				
 
-				<DataGrid Margin="5" AutoGenerateColumns="False" BorderThickness="1.3" Height="575" 
-							 ItemsSource="{Binding Path=ClassDetailInfos}">
+
+				<DataGrid Margin="5" AutoGenerateColumns="False" BorderThickness="1.3" Height="575" FontWeight="Bold"
+							 ItemsSource="{Binding Path=ClassDetailInfos}" Background="#F6F5F5" >
 					<DataGrid.Resources>
 						<Style TargetType="ComboBox" x:Key="AccessModifiersStyle">
 							<Setter Property="ItemsSource"
@@ -129,7 +129,7 @@
 						</Style>
 					</DataGrid.Resources>
 					<DataGrid.Columns>
-						<DataGridTextColumn Header="ClassName" Width="100" 
+						<DataGridTextColumn Header="ClassName" Width="120" 
 												  Binding="{Binding Path=ClassName}"/>
 
 						<DataGridComboBoxColumn Header="Access Modifier" Width="180"
@@ -149,11 +149,9 @@
                                 SelectedItemBinding="{Binding MemberType}"
                                 ElementStyle			="{StaticResource MemberTypesStyle}"
                                 EditingElementStyle="{StaticResource MemberTypesStyle}"/>
-
 						<DataGridTextColumn Header="Comment" Width="180"
 												  Binding="{Binding Path=Comment}"/>
 					</DataGrid.Columns>
-
 				</DataGrid>
 
 				<!--	Col 0  Row 1 여기서 다 변환-->
@@ -162,9 +160,9 @@
 					<TextBox Margin="5,0,0,0"     FontSize="14"  Width="250" Height="30"
 								Text="{Binding Path=NewDataType}" />
 					<Button  Content="Add"        FontWeight="Bold" Margin="5,0,0,0" Width="75" Height="30"
-								Command ="{Binding AddDataTypeCommand}"/>
+								Command ="{Binding AddDataTypeCommand}"  Background="#81695B" BorderBrush="#1C1714" />
 					<Button  Margin="385,0,0,0" Width="120" Height="35" HorizontalAlignment="Right" Content="Confirm" FontWeight="Bold"
-							   Command ="{Binding ConfirmCommand}"/>
+							   Command ="{Binding ConfirmCommand}"  Background="#81695B" BorderBrush="#1C1714" />
 				</StackPanel>
 			</StackPanel>
 		</GroupBox>
@@ -173,7 +171,7 @@
 		<StackPanel Grid.Column="1" Grid.Row="0" Margin="5" VerticalAlignment="Center"  >
 
 			<Button  Width="60" Height="45" Margin="1" 
-						Command="{Binding Path=SendPriviewTextCommand}" >
+						Command="{Binding Path=SendPriviewTextCommand}"  Background="#81695B" BorderBrush="#1C1714"  >
 				<materialDesign:PackIcon Kind="ArrowRightBold" Width="35" Height="35" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 			</Button>
 		</StackPanel>
