--- a/OfficeAutomation.Coding/Modules/Modules.Setting/Views/FileManagement.xaml
+++ b/OfficeAutomation.Coding/Modules/Modules.Setting/Views/FileManagement.xaml
@@ -7,11 +7,12 @@
              prism:ViewModelLocator.AutoWireViewModel="True"	>
 				
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center"	>
-			<Button Margin="5,5" Width="100" Height="35" Content="Import"		 FontWeight="Bold" 
-					  Command="{Binding Path=ImportCommand}"    />
-			<Button Margin="0,5" Width="100" Height="35" Content="Export"		 FontWeight="Bold" 
-					  Command="{Binding Path=ExportCommand}"	  />
+		<Button Margin="5,5" Width="100" Height="35" Content="Import"		 FontWeight="Bold" 
+					  Command="{Binding Path=ImportCommand}" Background="#81695B" BorderBrush="#1C1714" />
+
+		<Button Margin="0,5" Width="100" Height="35" Content="Export"		 FontWeight="Bold" 
+					  Command="{Binding Path=ExportCommand}"	 Background="#81695B" BorderBrush="#1C1714"  />
 			<Button Margin="5,5" Width="100" Height="35" Content="Folder" FontWeight="Bold" 
-					  Command="{Binding Path=OpenFolderCommand}"/>
+					  Command="{Binding Path=OpenFolderCommand}" Background="#81695B" BorderBrush="#1C1714" />
 		</StackPanel>
 </UserControl>
